# area_pose_switcher

./: CMakeLists.txt  README.md  package.xml
area_visualizar/: CMakeLists.txt  package.xml
area_visualizar/include/area_visualizar/: area.hpp
area_visualizar/launch/: area_launch.py
area_visualizar/src/: area.cpp
gnss_area_recognizer/: CMakeLists.txt  README.md  package.xml
gnss_area_recognizer/config/: gnss_area_filter.param.yaml  gnss_area_recognizer.yaml
gnss_area_recognizer/include/gnss_area_filter/: gnss_area_filter.hpp
gnss_area_recognizer/include/gnss_area_recognizer/: gnss_area_recognizer.hpp
gnss_area_recognizer/launch/: gnss_area_filter.launch.xml  gnss_area_recognizer.launch
gnss_area_recognizer/src/: gnss_area_filter.cpp  gnss_area_filter_node.cpp  gnss_area_recognizer.cpp  gnss_area_recognizer_node.cpp
gnss_area_recognizer/test/src/: test_gnss_area_filter.cpp
include/: matrix_type.hpp
include/pose_switcher/: pose_switcher.h
launch/: pose_switcher.launch
map4_localization_msgs/: CMakeLists.txt  README.md  package.xml
ndt_pointcloud_relay/: CMakeLists.txt  README.md  package.xml
ndt_pointcloud_relay/src/: pointcloud_relay.cpp
pose_switcher/: CMakeLists.txt  README.md  package.xml
pose_switcher/include/: pose_array_interpolator.hpp  util_func.hpp
pose_switcher/launch/: pose_switcher.launch
pose_switcher/src/: pose_array_interpolator.cpp  pose_switcher.cpp  util_func.cpp
src/: pose_switcher.cpp  pose_switcher_node.cpp
