<?xml version="1.0"?>
<package format="3">
  <name>area_visualizar</name>
  <version>0.0.1</version>
  <description>ROS 2 package for area visualization.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/area_visualizar</url>
  <url type="repository">Your repository URL</url>
  <url type="bugtracker">Your bugtracker URL</url>

  <author email="your_email@example.com">Your Name</author>

  <!-- ROS 2依存関係の指定 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>autoware_auto_mapping_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- テスト用の依存関係、必要に応じて -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- 他のパッケージがこのパッケージを見つけられるようにするための情報 -->
  </export>
</package>
