<?xml version="1.0"?>
<package>
  <name>gnss_area_recognizer</name>
  <version>0.1.0</version>
  <description>The gnss_area_recognizer package</description>
  <maintainer email="hironari.yashiro@tier4.jp">Hironari Yashiro</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>autoware_lanelet2_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>lanelet2_extension</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>autoware_lanelet2_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>lanelet2_extension</run_depend>


  <export>
  </export>
</package>
