<?xml version="1.0"?>
<package format="3">
  <name>pose_switcher</name>
  <version>0.0.0</version>
  <description>The pose_switcher package</description>
  <maintainer email="ryohei.sasaki@map4.jp">ryohei sasaki</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tier4_debug_msgs</depend>
  <depend>map4_localization_msgs</depend>
  <!-- <depend>ndt_scan_matcher</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
